force-app/main/default/objects/MovieRequest__c/MovieRequest__c.object-meta.xml
<CustomObject>
    <label>Movie Request</label>
    <pluralLabel>Movie Requests</pluralLabel>
    <nameField>
        <label>Movie Request Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>