force-app/main/default/objects/MovieRequest__c/fields/Honeypot__c.field-meta.xml
<CustomField>
    <fullName>Honeypot__c</fullName>
    <label>Honeypot</label>
    <type>Text</type>
    <length>80</length>
</CustomField>