force-app/main/default/objects/MovieRequest__c/fields/Movie__c.field-meta.xml
<CustomField>
    <fullName>Movie__c</fullName>
    <label>Movie</label>
    <type>Lookup</type>
    <referenceTo>Movie__c</referenceTo>
    <relationshipLabel>Movie Requests</relationshipLabel>
    <relationshipName>MovieRequests</relationshipName>
</CustomField>