force-app/main/default/objects/MovieRequest__c/fields/RequestedBy__c.field-meta.xml
<CustomField>
    <fullName>RequestedBy__c</fullName>
    <label>Requested By</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Movie Requests</relationshipLabel>
    <relationshipName>MovieRequests</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>