force-app/main/default/objects/MovieRequest__c/fields/RequesterIpHash__c.field-meta.xml
<CustomField>
    <fullName>RequesterIpHash__c</fullName>
    <label>Requester IP Hash</label>
    <type>Text</type>
    <length>64</length>
</CustomField>