force-app/main/default/objects/MovieRequest__c/fields/RequesterName__c.field-meta.xml
<CustomField>
    <fullName>RequesterName__c</fullName>
    <label>Requester Name</label>
    <type>Text</type>
    <length>120</length>
</CustomField>