force-app/main/default/objects/MovieRequest__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GUEST</fullName>
                <default>true</default>
                <label>GUEST</label>
            </value>
            <value>
                <fullName>AUTHENTICATED</fullName>
            </value>
            <value>
                <fullName>ADMIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>