force-app/main/default/objects/MovieRequest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PENDING</fullName>
                <default>true</default>
                <label>PENDING</label>
            </value>
            <value>
                <fullName>APPROVED</fullName>
            </value>
            <value>
                <fullName>REJECTED</fullName>
            </value>
            <value>
                <fullName>FULFILLED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>