force-app/main/default/objects/MovieRequest__c/fields/TMDB_Id__c.field-meta.xml
<CustomField>
    <fullName>TMDB_Id__c</fullName>
    <label>TMDB Id</label>
    <type>Text</type>
    <length>32</length>
</CustomField>