force-app/main/default/objects/MovieRequest__c/validationRules/VR_EmailFormatOptional.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_EmailFormatOptional</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(RequesterEmail__c)), NOT(REGEX(RequesterEmail__c, "^[^@\\s]+@[^@\\s]+\\.[^@\\s]+$")))</errorConditionFormula>
    <errorMessage>Enter a valid email address.</errorMessage>
    <errorDisplayField>RequesterEmail__c</errorDisplayField>
</ValidationRule>