force-app/main/default/objects/MovieRequest__c/validationRules/VR_RejectIfHoneypotFilled.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_RejectIfHoneypotFilled</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(), NOT(ISBLANK(Honeypot__c)))</errorConditionFormula>
    <errorMessage>Invalid submission.</errorMessage>
    <errorDisplayField>Honeypot__c</errorDisplayField>
</ValidationRule>